--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,61 @@
 body{
     justify-content: center;
-    align-items: center;
+    text-align: center;
+
+   
 }
 
+.text-brand{
+    text-align: center;
+    justify-content: center;
+}
+
+
+.text-brand2{
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    align-content: center;
+    
+    margin: 50px;
+}
 p{
     justify-content: center;
-    margin-left: 40px;
+    text-align: center;
     font-size: 22px;
+    margin: 60px;
+   
 }
+
 
 
 .text-brand{
     justify-content: center;
+    margin: 50px;
+    text-align: center;
 
 }
 
 h1{
     justify-content: center;
-    margin: 10px;
+    margin: 30px;
 }
 
 h3{
     justify-content: baseline;
     text-align: center;
-    margin: 10px;
+    margin: 30px;
 }
 
 li{
     justify-content: center;
     font-size: 22px;
-    margin: 10px;
+    text-align: center;
+    align-items: center;
+}
+
+ul{
+    justify-content: center;
+    text-align: center;
 }
 
